# normalization

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  computeFeatures.cbp  normalization.cc  normalization.py  normalization_original.cc  normalization_tan.cc  normalization_tan2.cc
